# mocap4ros2_vicon

./: .gitignore  .travis.yml  README.md  dependency_repos.repos  mocap4ros2.repos  mocap4ros2.rosinstall
.github/workflows/: master.yaml  rolling.yaml
mocap4r2_vicon_driver/: CMakeLists.txt  package.xml  vicon_sdk_install.sh
mocap4r2_vicon_driver/config/: mocap4r2_vicon_driver_params.yaml
mocap4r2_vicon_driver/include/mocap4r2_vicon_driver/: mocap4r2_vicon_driver.hpp
mocap4r2_vicon_driver/launch/: mocap4r2_vicon_driver_launch.py
mocap4r2_vicon_driver/src/: mocap4r2_vicon_driver_main.cpp
mocap4r2_vicon_driver/src/mocap4r2_vicon_driver/: mocap4r2_vicon_driver.cpp
mocap_vicon_driver/: CMakeLists.txt  package.xml  vicon_sdk_install.sh
mocap_vicon_driver/cmake/: FindVICONDATASTREAMSDK_CPP.cmake
mocap_vicon_driver/config/: mocap_vicon_driver_params.yaml
mocap_vicon_driver/include/mocap_vicon_driver/: mocap_vicon_driver.hpp
mocap_vicon_driver/launch/: mocap_vicon_driver_launch.py
mocap_vicon_driver/src/: mocap_vicon_driver_main.cpp
mocap_vicon_driver/src/mocap_vicon_driver/: mocap_vicon_driver.cpp
mocap_vicon_driver/test/: test_mocap_vicon_driver.cpp
vicon2_driver/: CMakeLists.txt  package.xml  vicon_sdk_install.sh
vicon2_driver/cmake/: FindVICONDATASTREAMSDK_CPP.cmake  FindViconDataStreamSDK_CPP.cmake
vicon2_driver/config/: vicon2_driver_params.yaml
vicon2_driver/include/vicon2_driver/: vicon2_driver.hpp
vicon2_driver/launch/: vicon2.launch.py
vicon2_driver/src/: vicon2_driver.cpp  vicon2_driver_main.cpp
vicon2_driver/test/: test_vicon2_driver.cpp
